kubernetes_in_action/ch05/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  # service type is set to ExternalNames
  type: ExternalName
  # the fully qualified domain name of the actual service
  externalName: someapi.somecompay.com
  ports:
  - port: 80
