kubernetes_in_action/ch05/kubia-svc-multipleport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia
spec:
  # port 80 is mapped to the pods' port 8080
  port:
  - name: http
    port: 80
    targetPort: 8080
    # port 443 is mapped to pods' port 8443
  - name: https
    port: 443
    targetPort: 8443
    # the label selector always applies to the whole  service
  selector:
    app: kubia
